--- a/src/index.html
+++ b/src/index.html
@@ -235,11 +235,21 @@
       <div class="contacts__work contacts__connect">
         <div class="contacts__work--day">Контакти:</div>
         <div class="contacts__work--hours">
-          <a href="https://www.google.com/maps/place/%D0%B2%D1%83%D0%BB%D0%B8%D1%86%D1%8F+%D0%9C%D0%B8%D1%85%D0%B0%D0%B9%D0%BB%D0%B0+%D0%93%D1%80%D1%83%D1%88%D0%B5%D0%B2%D1%81%D1%8C%D0%BA%D0%BE%D0%B3%D0%BE,+6,+%D0%9A%D0%B8%D1%97%D0%B2,+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%B0,+02000/@50.4494397,30.5307593,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4ce524453048d:0x49a2895b6cb43e10!8m2!3d50.4494397!4d30.5307593!16s%2Fg%2F1tj901fm?entry=ttu"
-            class="contacts__link">вул. М. Грушевського, 6; Київ, 01001</a>
-          <a href="tel:+38 (044) 278-13-57" class="contacts__link">тел. +38 (044) 278-13-57</a>
-          <a href="tel:+38 (044) 278-74-54" class="contacts__link">факс +38 (044) 278-74-54</a>
-          <a href="mailto:info@namu.kiev.ua" class="contacts__link">e-mail: info@namu.kiev.ua</a>
+          <ul class="contacts__list">
+            <li class="contacts__list--items">
+              <a href="https://www.google.com/maps/place/%D0%B2%D1%83%D0%BB%D0%B8%D1%86%D1%8F+%D0%9C%D0%B8%D1%85%D0%B0%D0%B9%D0%BB%D0%B0+%D0%93%D1%80%D1%83%D1%88%D0%B5%D0%B2%D1%81%D1%8C%D0%BA%D0%BE%D0%B3%D0%BE,+6,+%D0%9A%D0%B8%D1%97%D0%B2,+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%B0,+02000/@50.4494397,30.5307593,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4ce524453048d:0x49a2895b6cb43e10!8m2!3d50.4494397!4d30.5307593!16s%2Fg%2F1tj901fm?entry=ttu"
+                class="contacts__link">вул. М. Грушевського, 6; Київ, 01001</a>
+            </li>
+            <li class="contacts__list--items">
+              <a href="tel:+38 (044) 278-13-57" class="contacts__link">тел. +38 (044) 278-13-57</a>
+            </li>
+            <li class="contacts__list--items">
+              <a href="tel:+38 (044) 278-74-54" class="contacts__link">факс +38 (044) 278-74-54</a>
+            </li>
+            <li class="contacts__list--items">
+              <a href="mailto:info@namu.kiev.ua" class="contacts__link">e-mail: info@namu.kiev.ua</a>
+            </li>
+          </ul>
         </div>
       </div>
 
