--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,330 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Museum</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&family=Inter:wght@700&family=Montserrat:wght@700&family=Space+Grotesk:wght@400;700&family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
+    <link
+      rel="icon"
+      href="./images/icons/favicon.ico"
+      type="images"
+    >
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
+    <header class="header">
+      <div class="header__container">
+        <div class="header__menu-logo">
+          <a href="#menu">
+            <img
+              src="./images/icons/icon-menu.svg"
+              alt="icon menu"
+              class="header__menu"
+            >
+          </a>
+          <a href="#">
+            <img
+              src="./images/icons/logo.svg"
+              alt="logo"
+              class="header__logo"
+            >
+          </a>
+        </div>
+        <div class="header__background">
+        </div>
+        <div class="header__content">
+          <h1 class="header__title">ХУДОЖНІЙ <br>МУЗЕЙ</h1>
+          <button class="header__button">
+            <div class="header__ticket">КВИТКИ</div>
+            <div class="header__arrow">
+              <img src="./images/icons/arrow.svg" alt="arrow">
+            </div>
+          </button>
+        </div>
+      </div>
+    </header>
+
+    <aside class="page__menu menu" id="menu">
+      <div class="menu__container">
+        <div class="menu__top">
+          <a href="#" class="icon icon--cross"></a>
+          <div class="menu__footer-contact">
+            <div class="menu__footer-block">
+              <a href="#galery" class="menu__link">Галерея</a>
+              <br>
+              <a href="#actual-events" class="menu__link">Виставки <br> та події</a>
+            </div>
+            <div class="menu__footer-block">
+              <a href="#subscription" class="menu__link">Про Нас</a>
+              <br>
+              <a href="#contact-us" class="menu__link">Контакти</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="menu__botton">
+          <div class="menu__grafic">
+            <div class="menu__grafic-container">
+              <div class="menu__title">Графік роботи</div>
+              <ul class="menu__list">
+                <li><strong>12:00 — 20:00</strong> Середа</li>
+                <li><strong>12:00 — 20:00</strong> Четвер</li>
+                <li><strong>12:00 — 20:00</strong> П’ятниця</li>
+                <li><strong>11:00 — 19:00</strong> Субота</li>
+                <li><strong>11:00 — 19:00</strong> Неділя</li>
+              </ul>
+            </div>
+
+            <div class="menu__add-data">
+              <strong>Вихідні</strong> понеділок, вівторок Каса припиняє роботу за 1 годину до закриття музею
+            </div>
+          </div>
+        </div>
+      </div>
+    </aside>
+
+    <main class="main">
+      <section class="actual-events" id="actual-events">
+        <h2 class="actual-events__main-title">Актуальні події</h2>
+        <article class="actual-events__article">
+          <img
+            src="./images/actual/actual-events_1.png"
+            alt="actual event 1"
+            class="actual-events__photo"
+          >
+          <div class="actual-events__content-block">
+            <div class="actual-events__subtitle">
+              <div class="actual-events__exibition">ВИСТАВКА</div>
+              <div class="actual-events__data">26.08-29.11.2019</div>
+            </div>
+
+            <div class="actual-events__titles">
+              <h3 class="actual-events__title">Йду і повертаюсь
+              </h3>
+              <div class="actual-events__rectangle"></div>
+            </div>
+
+            <div class="actual-events__text">
+              Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+            </div>
+          </div>
+
+        </article>
+        <article class="actual-events__article">
+          <img
+            src="./images/actual/actual-events_2.png"
+            alt="actual event 2"
+            class="actual-events__photo"
+          >
+          <div class="actual-events__content-block">
+            <div class="actual-events__subtitle">
+              <div class="actual-events__exibition">ВИСТАВКА</div>
+              <div class="actual-events__data">26.08-29.11.2019</div>
+            </div>
+            <div class="actual-events__titles">
+              <h3 class="actual-events__title">І спогади і мрії
+              </h3>
+              <div class="actual-events__rectangle"></div>
+            </div>
+
+            <div class="actual-events__text">
+              Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+            </div>
+          </div>
+        </article>
+        <div class="actual-events__lecture-block">
+          <img
+            src="./images/actual/actual-events_3.png"
+            alt="actual events 3"
+            class="actual-events__lower-photo"
+          >
+          <div class=" actual-events__lower-article">
+            <div class="actual-events__lower-subtitle">
+              <div class="actual-events__exhibition">
+                ЛЕКЦІЯ
+              </div>
+              <div class="actual-events__data">
+                26/08/2019 - 11:00
+              </div>
+            </div>
+            <div class="actual-events__lower-title">
+              Від класицизму до романтизму
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="galery" id="galery">
+        <h2 class="galery__title">Галерея</h2>
+
+        <div class="galery__container">
+          <div class="galery__wrapper">
+            <div class="galery__item">
+              <img
+                src="./images/gallery/galery1.png"
+                alt="photo1"
+                class="galery__image"
+                id="img1"
+              >
+            </div>
+
+            <div class="galery__item">
+              <img
+                src="./images/gallery/galery2.png"
+                alt="photo2"
+                class="galery__image"
+                id="img2"
+              >
+            </div>
+
+            <div class="galery__item">
+              <img
+                src="./images/gallery/galery3.png"
+                alt="photo3"
+                class="galery__image"
+                id="img3"
+              >
+            </div>
+
+            <div class="galery__item">
+              <img
+                src="./images/gallery/galery4.png"
+                alt="photo4"
+                class="galery__image"
+                id="img4"
+              >
+            </div>
+          </div>
+          <div class="galery__pagination">
+            <a href="#img1" class="galery__dot"></a>
+            <a href="#img2" class="galery__dot"></a>
+            <a href="#img3" class="galery__dot"></a>
+            <a href="#img4" class="galery__dot"></a>
+          </div>
+        </div>
+      </section>
+
+      <section class="subscription" id="subscription">
+        <div class="subscription__container">
+          <div class="subscription__title">Підписка</div>
+          <div class="subscription__subtitle">
+            Бути в курсі всіх актуальних подій та останніх новин.
+          </div>
+          <form action="#" class="subscription__form">
+            <input
+              type="email"
+              class="subscription__email-form"
+              placeholder="E-mail"
+            >
+            <button class="subscription__button">
+              <img
+                src="./images/icons/arrow.svg"
+                alt="arrow"
+                class="subscription__arrow-button"
+              >
+            </button>
+          </form>
+        </div>
+
+      </section>
+
+      <section class="contact-us" id="contact-us">
+        <div class="contact-us__tab-block">
+          <div class="contact-us__block">
+            <div class="contact-us__networks">
+              <a href="#">
+                <img
+                  src="./images/icons/logo.svg"
+                  alt="logo"
+                  class="contact-us__logo"
+                >
+              </a>
+
+              <div class="contact-us__social-nets">
+                <img
+                  src="./images/icons/icon-facebook.svg"
+                  alt="facebook"
+                  class="contact-us__net"
+                >
+                <img
+                  src="./images/icons/icon-instagram.svg"
+                  alt="instagram"
+                  class="contact-us__net"
+                >
+              </div>
+            </div>
+            <div class="contact-us__container">
+              <div class="contact-us__content">
+                <div class="contact-us__grafic">
+                  <div class="contact-us__title">Графік роботи</div>
+                  <ul class="contact-us__list">
+                    <li><strong>12:00 — 20:00</strong> Середа</li>
+                    <li><strong>12:00 — 20:00</strong> Четвер</li>
+                    <li><strong>12:00 — 20:00</strong> П’ятниця</li>
+                    <li><strong>11:00 — 19:00</strong> Субота</li>
+                    <li><strong>11:00 — 19:00</strong> Неділя</li>
+                  </ul>
+                  <div class="contact-us__add-data">
+                    Вихідні понеділок, вівторок Каса припиняє роботу за 1 годину до закриття музею
+                  </div>
+                </div>
+
+                <div class="contact-us__contacts">
+                  <div class="contact-us__title">Контакти:</div>
+                  <div class="contact-us__contact">
+                    <p>
+                      вул. М. Грушевського, 6; Київ, 01001
+                      <br>
+                      тел. +38 (044) 278-13-57
+                      <br>
+                      факс +38 (044) 278-74-54
+                      <br>
+                      e-mail: info@namu.kiev.ua
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="contact-us__button-container">
+                <div class="contact-us__top-button">
+                  <img
+                    src="./images/icons/top-arrow.svg"
+                    alt="top arrow"
+                    class="contact-us__top-arrow"
+                  >
+                </div>
+              </div>
+              <div class="contact-us__navigation">
+                <div class="contact-us__footer-contact">
+                  <div class="footer__footer-block">
+                    <a href="#galery" class="contact-us__link">Галерея</a>
+                    <br>
+                    <a href="#actual-events" class="contact-us__link">Виставки та події</a>
+                  </div>
+                  <div class="footer__footer-block">
+                    <a href="#subscription" class="contact-us__link">Про Нас</a>
+                    <br>
+                    <a href="#contact-us" class="contact-us__link">Контакти</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="contact-us__subtitle">
+          <div class="contact-us__sub">
+            Designed by Zhyriada Marina
+          </div>
+          <div class="contact-us__sub">
+            Copyright © 2019. All Rights Reserved.
+          </div>
+        </div>
+      </section>
+    </main>
+
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
