--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="./images/logo-NA-MU.svg">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
+
   <body>
     <header class="header" id="header">
       <nav class="header__nav">
@@ -26,31 +27,36 @@
     </header>
 
     <aside class="menu" id="menu">
-      <nav class="menu__navigation">
+      <nav class="menu__nav">
         <a href="#close" class="icon icon--close"></a>
 
-        <div class="menu__conteiner navigation">
-          <a href="#gallery" class="menu__link navigation__link">Галерея</a>
+        <div class="menu__navigation">
+          <a href="#gallery" class="menu__navigation__link">Галерея</a>
 
-          <a href="#expo" class="menu__link navigation__link">Виставки та події</a>
+          <a href="#expo" class="menu__navigation__link">Про Нас</a>
 
-          <a href="#about_us" class="menu__link navigation__link">Про Нас</a>
+          <a href="#about_us" class="menu__navigation__link">Виставки та події</a>
 
-          <a href="#contacts" class="menu__link navigation__link">Контакти</a>
+          <a href="#contacts" class="menu__navigation__link">Контакти</a>
         </div>
       </nav>
 
       <div class="menu__schedule">
         <h2 class="menu__title">Графік роботи</h2>
-        <p class="menu__description menu__time">
-          <span class="footer__schedule__time">12:00 — 20:00</span> середа<br>
-          <span class="footer__schedule__time">12:00 — 20:00</span> четвер<br>
-          <span class="footer__schedule__time">12:00 — 20:00</span> п’ятниця<br>
-          <span class="footer__schedule__time">11:00 — 19:00</span> субота<br>
-          <span class="footer__schedule__time">11:00 — 19:00</span> неділя
-        </p>
-        <!-- <br> -->
-        <p class="menu__description menu__weekends">
+
+        <ul class="menu__schedule__description">
+          <li class="menu__schedule__time">12:00 — 20:00<span class="menu__schedule__day"> середа</span></li>
+
+          <li class="menu__schedule__time">12:00 — 20:00<span class="menu__schedule__day"> четвер</span></li>
+
+          <li class="menu__schedule__time">12:00 — 20:00<span class="menu__schedule__day"> п’ятниця</span></li>
+
+          <li class="menu__schedule__time">11:00 — 19:00<span class="menu__schedule__day"> субота</span></li>
+
+          <li class="menu__schedule__time">11:00 — 19:00<span class="menu__schedule__day"> неділя</span></li>
+        </ul>
+
+        <p class="menu__description">
           <span class="footer__schedule__time">Вихідні:</span> понеділок, вівторок<br>
           Каса припиняє роботу за 1 годину<br>
           до закриття музею
@@ -180,16 +186,22 @@
         <div class="footer__conteiner">
           <div class="footer__schedule">
             <h2 class="footer__title">Графік роботи</h2>
-            <p class="footer__description">
-              <span class="footer__schedule__time">12:00 — 20:00</span> середа<br>
-              <span class="footer__schedule__time">12:00 — 20:00</span> четвер<br>
-              <span class="footer__schedule__time">12:00 — 20:00</span> п’ятниця<br>
-              <span class="footer__schedule__time">11:00 — 19:00</span> субота<br>
-              <span class="footer__schedule__time">11:00 — 19:00</span> неділя
-            </p>
+
+            <ul class="footer__schedule__description">
+              <li class="footer__schedule__time">12:00 — 20:00<span class="footer__schedule__day"> середа</span></li>
+
+              <li class="footer__schedule__time">12:00 — 20:00<span class="footer__schedule__day"> четвер</span></li>
+
+              <li class="footer__schedule__time">12:00 — 20:00<span class="footer__schedule__day"> п’ятниця</span></li>
+
+              <li class="footer__schedule__time">11:00 — 19:00<span class="footer__schedule__day"><br>субота</span></li>
+
+              <li class="footer__schedule__time">11:00 — 19:00<span class="footer__schedule__day"><br>неділя</span></li>
+            </ul>
             <br>
             <p class="footer__description">Вихідні: понеділок, вівторок<br>
-              Каса припиняє роботу за 1 годину до закриття музею
+              Каса припиняє роботу за 1 годину
+              до закриття музею
             </p>
           </div>
 
@@ -207,12 +219,7 @@
               </li>
 
               <li>
-                <a
-                  href="tel:380442781357"
-                  class="footer__link"
-                >
-                  тел. +38 (044) 278-13-57
-                </a>
+                <a href="tel:380442781357" class="footer__link">тел. +38 (044) 278-13-57</a>
               </li>
 
               <li>
@@ -230,27 +237,21 @@
               </li>
             </ul>
           </div>
+
+          <a href="#header" class="footer__top__button"></a>
         </div>
       </div>
 
-      <nav class="footer__navigation navigation">
-        <ul class="footer__navigation__list">
-          <li>
-            <a href="#gallery" class="navigation__link">Галерея</a>
-          </li>
+      <nav class="footer__nav">
+        <div class="footer__nav__list">
+          <a href="#gallery" class="footer__nav__link">Галерея</a>
 
-          <li>
-            <a href="#expo" class="navigation__link">Виставки та події</a>
-          </li>
+          <a href="#expo" class="footer__nav__link">Про Нас</a>
 
-          <li>
-            <a href="#about_us" class="navigation__link">Про Нас</a>
-          </li>
+          <a href="#about_us" class="footer__nav__link">Виставки та події</a>
 
-          <li>
-            <a href="#contacts" class="navigation__link">Контакти</a>
-          </li>
-        </ul>
+          <a href="#contacts" class="footer__nav__link">Контакти</a>
+        </div>
       </nav>
 
       <div class="footer__bootom">
