--- a/src/index.html
+++ b/src/index.html
@@ -11,9 +11,13 @@
   <body>
     <header class="header" id="header">
       <nav class="header__nav">
-        <a href="#menu" class="header__link icon icon--menu"></a>
+        <div>
+          <a href="#menu" class="header__link icon icon--menu"></a>
+        </div>
 
-        <a href="#" class="header__link icon icon--logo"></a>
+        <div class="header__link__wrapper">
+          <a href="#" class="header__link icon icon--logo"></a>
+        </div>
       </nav>
 
       <div class="header__bottom">
@@ -65,7 +69,7 @@
     </aside>
 
     <main class="main">
-      <section class="events" id="expo">
+      <section class="events events__wrapper" id="expo">
         <h2 class="events__title">Актуальні події</h2>
 
         <div class="events__catalog">
@@ -95,7 +99,7 @@
         </div>
       </section>
 
-      <section class="lections">
+      <section class="lections lections__wrapper">
         <!-- <img src="./images/mobile-muzej-2.png" alt="image" class="lections__image"> -->
         <div class="lections__container">
           <h2 class="lections__title">ЛЕКЦІЯ <span class="lections__date">26/08/2019 - 11:00</span></h2>
