--- a/src/index.html
+++ b/src/index.html
@@ -15,22 +15,28 @@
   </head>
   <body class="page">
     <header class="header container">
-      <div class="top-bar">
+      <div class="top-bar" id="page">
         <a href="#menu" class="icon menu--icon"></a>
         <a href="#" class="top-bar__logo"></a>
       </div>
 
-      <h1 class="header__title">ХУДОЖНІЙ <br> МУЗЕЙ</h1>
-
-      <div class="header__button">
-        <div href="#" class="header__button-title">КВИТКИ</div>
-        <div class="header__button-rectangle">
-          <img
-            src="./images/button-arrow.png"
-            alt="button-arrow"
-            class="header__button-arrow"
-          >
+      <div class="header__block">
+        <h1 class="header__title">ХУДОЖНІЙ <br> МУЗЕЙ</h1>
+        <div class="header__button">
+          <div href="#" class="header__button-title">КВИТКИ</div>
+          <div class="header__button-rectangle">
+            <img
+              src="./images/button-arrow.png"
+              alt="button-arrow"
+              class="header__button-arrow"
+            >
+          </div>
         </div>
+      </div>
+
+      <div class="header__events">
+        <span class="header__line"></span>
+        <span class="header__line-title">ПОДІЇ</span>
       </div>
     </header>
 
@@ -41,19 +47,40 @@
         <div class="menu__nav">
           <div class="menu__links">
             <a href="#gallery" class="menu__link">Галерея</a>
-            <a href="#" class="menu__link">Виставки та події</a>
+            <a href="#events" class="menu__link">Виставки та події</a>
           </div>
           <div class="menu__links">
-            <a href="#" class="menu__link">Про Нас</a>
+            <a href="#about-us" class="menu__link">Про Нас</a>
             <a href="#contacts" class="menu__link">Контакти</a>
           </div>
         </div>
       </div>
+
+      <div class="menu__line"></div>
+
+      <div class="menu__schedule">
+        <article class="menu__title">Графік роботи</article>
+        <article class="menu__times">
+          <div class="menu__additional">
+            <span><span class="menu__bold">12:00 — 20:00</span> середа</span>
+            <span><span class="menu__bold">12:00 — 20:00</span> четвер</span>
+            <span><span class="menu__bold">12:00 — 20:00</span> п’ятниця</span>
+            <span><span class="menu__bold">11:00 — 19:00</span> субота</span>
+            <span><span class="menu__bold">11:00 — 19:00</span> неділя</span>
+          </div>
+
+          <article class="menu__weekends">
+            <span class="menu__bold">Вихідні:</span> понеділок, вівторок <br>
+            Каса припиняє роботу за 1 годину
+            до закриття музею
+          </article>
+        </article>
+      </div>
     </aside>
 
     <main class="main">
-      <section class="section events">
-        <h2 class="events__title">Актуальні <br> події</h2>
+      <section class="section events" id="events">
+        <h2 class="events__title">Актуальні події</h2>
         <div class="events__go-and-come-back">
           <img
             src="./images/go-and-come-back.png"
@@ -61,17 +88,17 @@
             class="events__img"
           >
 
-          <div class="events__inform">
-            <span>ВИСТАВКА</span>
-            <span class="events__date">26.08-29.11.2019</span>
+          <div class="events__information">
+            <div class="events__inform">
+              <span>ВИСТАВКА</span>
+              <span class="events__date">26.08-29.11.2019</span>
+            </div>
+            <div class="events__block">
+              <h3 class="events__block-title">Йду і повертаюсь</h3>
+              <span class="events__block-rectangle"></span>
+            </div>
+            <article class="events__article">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</article>
           </div>
-
-          <div class="events__block">
-            <h3 class="events__block-title">Йду і повертаюсь</h3>
-            <span class="events__block-rectangle"></span>
-          </div>
-
-          <article class="events__article">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</article>
         </div>
 
         <div class="events__memories-and-dreams  ">
@@ -81,17 +108,17 @@
             class="events__img"
           >
 
-          <div class="events__inform">
-            <span>ВИСТАВКА</span>
-            <span class="events__date">26.08-29.11.2019</span>
+          <div class="events__information">
+            <div class="events__inform">
+              <span>ВИСТАВКА</span>
+              <span class="events__date">26.08-29.11.2019</span>
+            </div>
+            <div class="events__block">
+              <h3 class="events__block-title">І спогади і мрії</h3>
+              <span class="events__block-rectangle"></span>
+            </div>
+            <article class="events__article">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</article>
           </div>
-
-          <div class="events__block">
-            <h3 class="events__block-title">І спогади і мрії</h3>
-            <span class="events__block-rectangle"></span>
-          </div>
-
-          <article class="events__article">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</article>
         </div>
       </section>
 
@@ -114,28 +141,28 @@
 
         <div class="gallery__carousel">
           <img
-            class="gallery__slide"
+            class="gallery__slide gallery__slide--1"
             src="./images/gallery-1.png"
             alt="gallery-1"
             id="gallery-1"
           >
 
           <img
-            class="gallery__slide"
+            class="gallery__slide gallery__slide--2"
             src="./images/gallery-2.png"
             alt="gallery-2"
             id="gallery-2"
           >
 
           <img
-            class="gallery__slide"
+            class="gallery__slide gallery__slide--3"
             src="./images/gallery-3.png"
             alt="gallery-3"
             id="gallery-3"
           >
 
           <img
-            class="gallery__slide"
+            class="gallery__slide gallery__slide--4"
             src="./images/gallery-4.png"
             alt="gallery-4"
             id="gallery-4"
@@ -150,10 +177,10 @@
         </div>
       </section>
 
-      <section class="subscription">
+      <section class="subscription" id="about-us">
         <h2 class="subscription__title">Підписка</h2>
         <article class="subscription__article">
-          Бути в курсі всіх актуальних <br> подій та останніх новин.
+          Бути в курсі всіх актуальних подій та останніх новин.
         </article>
 
         <div class="subscription__button">
@@ -183,52 +210,59 @@
         </div>
       </div>
 
-      <div class="footer__inform">
-        <div class="footer__schedule">
-          <article class="footer__title">Графік роботи</article>
-          <article class="footer__times">
-            <span class="footer__time">12:00 — 20:00</span> середа
-            <span class="footer__time">12:00 — 20:00</span> четвер
-            <span class="footer__time">12:00 — 20:00</span> п’ятниця
-            <span class="footer__time">11:00 — 19:00</span> субота
-            <span class="footer__time">11:00 — 19:00</span> неділя
-
-            <article class="footer__weekends">
-              Вихідні понеділок, вівторок <br>
-              Каса припиняє роботу за 1 годину
-              до закриття музею
+      <div class="footer__content">
+        <div class="footer__inform">
+          <div class="footer__schedule">
+            <article class="footer__title">Графік роботи</article>
+            <article class="footer__times">
+              <span>
+                <span class="footer__time">12:00 — 20:00</span> середа
+              </span>
+              <span>
+                <span class="footer__time">12:00 — 20:00</span> четвер
+              </span>
+              <span>
+                <span class="footer__time">12:00 — 20:00</span> п’ятниця
+              </span>
+              <span>
+                <span class="footer__time">11:00 — 19:00</span> субота
+              </span>
+              <span>
+                <span class="footer__time">11:00 — 19:00</span> неділя
+              </span>
+              <article class="footer__weekends">
+                Вихідні понеділок, вівторок <br>
+                Каса припиняє роботу за 1 годину
+                до закриття музею
+              </article>
             </article>
-          </article>
+          </div>
+          <div class="footer__contacts" id="contacts">
+            <article class="footer__title">Контакти:</article>
+            <article class="footer__address">
+              вул. М. Грушевського, 6; Київ, 01001 <br>
+              тел. +38 (044) 278-13-57 <br>
+              факс +38 (044) 278-74-54 <br>
+              e-mail: info@namu.kiev.ua
+            </article>
+          </div>
         </div>
-
-        <div class="footer__contacts" id="contacts">
-          <article class="footer__title">Контакти:</article>
-          <article class="footer__address">
-            вул. М. Грушевського, 6; Київ, 01001 <br>
-            тел. +38 (044) 278-13-57 <br>
-            факс +38 (044) 278-74-54 <br>
-            e-mail: info@namu.kiev.ua
-          </article>
+        <div class="footer__arrow-border">
+          <a
+            href="#page"
+            class="footer__arrow-up"
+          ></a>
         </div>
-      </div>
-
-      <div class="footer__arrow-border">
-        <a
-          href="#"
-          class="footer__arrow-up"
-        ></a>
-      </div>
-
-      <hr class="footer__line">
-
-      <div class="footer__inform">
-        <div class="footer__links">
-          <a href="#gallery" class="footer__link">Галерея</a>
-          <a href="#" class="footer__link">Виставки та події</a>
-        </div>
-        <div class="footer__links">
-          <a href="#" class="footer__link">Про Нас</a>
-          <a href="#contacts" class="footer__link">Контакти</a>
+        <hr class="footer__line">
+        <div class="footer__nav">
+          <div class="footer__links footer__links--1">
+            <a href="#gallery" class="footer__link">Галерея</a>
+            <a href="#events" class="footer__link">Виставки та події</a>
+          </div>
+          <div class="footer__links footer__links--2">
+            <a href="#about-us" class="footer__link">Про Нас</a>
+            <a href="#contacts" class="footer__link">Контакти</a>
+          </div>
         </div>
       </div>
 
